
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#666699"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <!-- tools:context="kermit11.tweettimer.WelcomeActivity" -->
	
	    <TextView
	        android:id="@+id/helpIntro"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/help_intro"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />
	
	    <TextView
	        android:id="@+id/helpAbout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/help_about"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />
	
	    <TextView
	        android:id="@+id/helpFAQ"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/help_faq"
	        android:textColor="#FFFFFF"
	        android:textSize="18sp"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/helpFAQtitle0"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_0"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer0"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_0"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    <TextView
	        android:id="@+id/helpFAQtitle1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_1"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_1"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    <TextView
	        android:id="@+id/helpFAQtitle2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_2"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_2"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    <TextView
	        android:id="@+id/helpFAQtitle3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_3"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_3"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    <TextView
	        android:id="@+id/helpFAQtitle4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_4"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_4"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    <TextView
	        android:id="@+id/helpFAQtitle5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:text="@string/faq_title_5"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/helpFAQanswer5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/faq_answer_5"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp"
	        android:visibility="gone"
	        />
	    	    
	</LinearLayout>
</ScrollView>